package es.uniovi.dlp.ast;

public interface ASTNode {
  int getLine();

  int getColumn();
}
