package es.uniovi.dlp.ast.statement;

public interface Statement {
}
