@startuml Statements
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

interface Statement

class If {
    condition: Expression
    ifBody: List<Statement>
    elseBody: List<Statement>
}
class Assignation {
    leftA: Variable
    rightA: Expression

}
class Read{
toRead: String
}
class While {
    condition: Expression
    whileBody: List<Statement>
}
class Write {
    body: List<Expression>
}
class Return {
expression : Expression
}
class Invocation{
    arguments: List<Expression>
}



ASTNode <|-- Statement
Statement <|.. If
Statement <|.. Invocation
Statement <|.. Write
Statement <|.. While
Statement <|.. Return
Statement <|.. Assignation
Statement <|.. Read

If o-- "1" Expression
Assignation o-- "1" Expression
If o-- "0..n" Statement
While o-- "1" Expression
While o-- "0..n" Statement
Write o-- "0..n" Expression
Invocation o-- "1..n" Expression
Return o-- "1" Expression


@enduml
